# joinery

./: Cargo.toml  README.md  TODO.md  bacon.toml  xmeld
.github/: dependabot.yml
.github/workflows/: rust.yml
joinery/: Cargo.toml
joinery/examples/: calc.rs  custom_widget.rs  hello_masonry.rs  simple_image.rs  to_do_list.rs
joinery/src/: contexts.rs  event.rs  event_loop_runner.rs  event_loop_runner.rs.orig  lib.rs  paint_scene_helpers.rs  parley.rs  render_root.rs  terminal.rs  text_helpers.rs  theme.rs  vello.rs
joinery/src/terminal/: event.rs  keyboard.rs  mod.rs
joinery/src/testing/: harness.rs  helper_widgets.rs
joinery/src/text/: attribute.rs  font_descriptor.rs  input_component.rs  layout.rs  rich_text.rs  storage.rs
joinery/src/text2/: edit.rs  layout.rs  selection.rs  store.rs
joinery/src/widget/: align.rs  button.rs  checkbox.rs  flex.rs  image.rs  label.rs  portal.rs  prose.rs  root_widget.rs  scroll_bar.rs  sized_box.rs  spinner.rs  split.rs  textbox.rs  widget.rs  widget_pod.rs
